# ImpactGuard-Agent

./: .gitignore  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-28-module1-tree-sitter-extraction.md  2026-06-28-module1-tree-sitter-extraction.zh.md
probes/: findings.md  probe1_multilspy_shape.py  probe2_flask_decorator.py  probe3_call_node_shape.py  probe4_uri_normalization.py
probes/fixture_a/: main.py
probes/fixture_b/: app.py
slicer/: __init__.py  cache.py  diff_utils.py  extractor.py  folding.py  pipeline.py
slicer2/: __init__.py  call_graph.py
tests/: conftest.py  test_cache.py  test_call_graph.py  test_diff_utils.py  test_extractor.py  test_folding.py  test_pipeline.py  test_uri_normalization.py
tests/fixtures/: real_absl_parser.py  real_flask_cli.py  real_starlette_async.py  sample_module_level_change.py  sample_with_unicode.py
tests/fixtures/fixture_c/: caller.py  importer.py
