[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "impactguard-slicer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.21,<1.0",
    "tree-sitter-python>=0.21,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
